// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`confirm (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  yes?
│  ● Yes / ○ No
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  No
│",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > can set initialValue 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ○ Yes / ● No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  No",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > left arrow moves to previous choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ○ Yes / ● No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ● Yes / ○ No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Yes",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders custom active choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● bleep / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  bleep",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders custom inactive choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ bleep
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Yes",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders message with choices 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Yes",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > right arrow moves to next choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ○ Yes / ● No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  No",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  yes?
│  ● Yes / ○ No
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  No
│",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > can set initialValue 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ○ Yes / ● No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  No",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > left arrow moves to previous choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ○ Yes / ● No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ● Yes / ○ No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Yes",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders custom active choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● bleep / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  bleep",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders custom inactive choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ bleep
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Yes",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders message with choices 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Yes",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > right arrow moves to next choice 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ○ Yes / ● No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  No",
  "
",
  "<cursor.show>",
]
`;
